# judgeman

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.js  main.rs  manifest.json  pom.xml  popup.html  popup.js  test.html
archive/judgeman_v2/: dependency-reduced-pom.xml  pom.xml
archive/judgeman_v2/src/main/java/com/example/: CaseScraper.java
archive/judgeman_v3/: Cargo.toml
archive/judgeman_v3/src/: main.rs
judgeman_v4/src/: background.js  contentScript.js  manifest.json  options.css  options.html  options.js  panel.css  popup.css  popup.html  popup.js
src/: CaseScraper.java  main.js  manifest.json
src/main/java/com/example/: CaseScraper.java
